parte 2 do site 24-10

--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-<html>
-  <h1> Este e o meu primeiro arquivo no repositorio. </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+    <h1>Futebol</h1>
+    <p>Futebol é um esporte disputado entre duas equipes,cada uma 
+    com 11 jogadores,que utilizam os pés e a cabeça
+    para movimentar a bola em direção ao campo
+     adversário,com objetivo de coloca-la dentro do gol ou meta.A partida
+    divide-se em dois tempos de 45 minutos,com intervalo de 15 minutos.</p>
+    
+    <p>O futebol,esporte que é considerado a paixão nacional e,sem dúvidas,o mais popular do 
+mundo,começou a ser praticado na inglaterra,no século XVII.A época,o esporte não tinha 
+formato que tem hoje e tampouco era chamado de "FUTEBOL".Isso só
+aconteceu décadas depois,com a criação das regras.</p>
+</body>
 </html>
