--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 mundo,começou a ser praticado na inglaterra,no século XVII.A época,o esporte não tinha 
 formato que tem hoje e tampouco era chamado de "FUTEBOL".Isso só
 aconteceu décadas depois,com a criação das regras.</p>
+
+<p>O futebol é o esporte coletivo mais popular do planeta. Segundo dados da Federação Internacional
+ de Futebol (Fifa), cerca de 270 milhões de pessoas atuam em atividades diretamente relacionadas
+ao esporte (seja como jogador, seja como árbitro)|1|.</p>
 </body>
 </html>
