--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@ aconteceu décadas depois,com a criação das regras.</p>
 <p>O futebol é o esporte coletivo mais popular do planeta. Segundo dados da Federação Internacional
  de Futebol (Fifa), cerca de 270 milhões de pessoas atuam em atividades diretamente relacionadas
 ao esporte (seja como jogador, seja como árbitro)|1|.</p>
+
+<ul>
+
+<li>brasil</li>
+<li>frança</li>
+<li>alemanha</li>
+<li>bolivia</li>
+
+</ul>
+
 </body>
 </html>
